ultima version, solo falta bicicleta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>easy-vreco</title>
+	<link rel="stylesheet" type="text/css" href="assets/dist/css/map-icons.css">
+	<script src="assets/dist/js/map-icons.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
@@ -16,7 +18,6 @@
 				<input type="text" name="type" id="origin-input" placeholder="Introduce una ubicación" aria-describedly="origen">
 				<span class="input">Destino</span>
 				<input type="text" name="type" id="destination-input" placeholder="Introduce un ubicación" aria-describedly="destino">
-				<button type="button" class="btn btn-warning" id="encuentrame">Ruta</button>
 			</div>
 		</div>
 		<div class="row">
